fixing table text alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,8 +218,7 @@ figure {
   margin-top: 0.9em;
   margin-bottom: 0.5em;
   border-left: 5px solid #eee;
-  border-right: 5px solid #eee;
-  display: table; }
+  border-right: 5px solid #eee; }
   figure img {
     margin-bottom: 0.5em; }
 
@@ -234,14 +233,19 @@ figure.table {
   border-left: 5px solid #eee;
   border-right: 5px solid #eee;
   display: table; }
-  figure.table .table {
+  figure.table figcaption.table {
     padding: 10px 20px;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0.9em;
     margin-bottom: 0.5em; }
-  figure.table img {
+  figure.table table.table {
+    padding: 10px 20px;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0.9em;
     margin-bottom: 0.5em; }
 
 figure figcaption:before {
